// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Prompter checkbox 1`] = `
{
  "checkbox": [
    {
      "name": "b",
      "selected": true,
      "value": "b",
    },
    {
      "name": "c",
      "selected": true,
      "value": "c",
    },
  ],
}
`;

exports[`Prompter checkbox w/options 1`] = `
{
  "checkbox": [
    {
      "name": "a",
      "selected": false,
      "value": "a",
    },
    {
      "name": "b",
      "selected": true,
      "value": "b",
    },
    {
      "name": "c",
      "selected": true,
      "value": "c",
    },
  ],
}
`;

exports[`Prompter handles multiple questions 1`] = `
[
  "",
  "",
]
`;

exports[`Prompter handles multiple questions 2`] = `[]`;

exports[`Prompter prompts user and correctly processes delayed input 1`] = `
[
  "",
]
`;

exports[`Prompter prompts user and correctly processes delayed input 2`] = `[]`;
